Created the database connection.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MasterDatabase": "Server=LAPTOP-VBIOM4D2;Database=Pomo;Trusted_Connection=True;"
+  }
 }
