--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MasterDatabase": "Server=LAPTOP-VBIOM4D2;Database=Pomo;Trusted_Connection=True;"
+    "MasterDatabase": "Server=LAPTOP-VBIOM4D2;Database=Pomodoro;Trusted_Connection=True;"
   }
 }
