Added access token.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MasterDatabase": "Server=LAPTOP-VBIOM4D2;Database=Pomodoro;Trusted_Connection=True;"
+  },
+  "Token":{
+    "Issuer":"www.test.com",
+    "Audience":"www.test.com",
+    "SecurityKey":"This is my custom secret key for authentication."
   }
 }
