fix authentication bug

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Token":{
+    "Issuer":"www.test.com",
+    "Audience":"www.test.com",
+    "SecurityKey":"This is my custom secret key for authentication."
   }
 }
