--- a/WebApi/Properties/launchSettings.json
+++ b/WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7198;http://localhost:5101",
+      "applicationUrl": "https://localhost:7198;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
